# kip

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: context-pct-plan.md
resources/: icon.icns  icon_256.rgba  kip-ctx-hook.sh  rwarp-ctx-hook.sh
src/: config.rs  ctx_index.rs  i18n.rs  main.rs  palette.rs  session.rs  term_view.rs  update.rs
src/plat/: mod.rs  unix.rs  windows.rs
