[package]
name = "kip"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.26.0"
dirs = "6.0.0"
eframe = "0.35.0"
egui = "0.35.0"
rfd = "0.17.2"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
] }

[profile.release]
lto = "thin"
strip = true
